update on 1.18